--- a/cart.html
+++ b/cart.html
@@ -67,6 +67,43 @@
   </div>
 </div>
 
+  <div class="overlay overlay--hidden">
+    <div class="overlay__content-wrapper">
+      <button class="js-overlay__btn-close" type="button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none" viewbox="0 0 28 28">
+          <path stroke="#000" stroke-linecap="round" stroke-width="4" d="m2 2 24 24m0-24L2 26"></path>
+        </svg>
+      </button>
+      <div class="overlay__content">
+        <div class="overlay__content-title">
+          Закажите свои цветы сейчас!
+        </div>
+        <p class="overlay__content-text">
+          Мы привезём вам заказ сразу к двери в указанный срок.
+        </p>
+        <form class="overlay__form form">
+          <label>
+            <input type="text" placeholder="Ваше имя">
+          </label>
+          <label>
+            <input type="tel" placeholder="Номер телефона">
+          </label>
+          <label>
+            <input type="text" placeholder="Ваш адрес">
+          </label>
+          <button class="btn" type="submit">
+            Отправить заявку
+          </button>
+          <p class="overlay__form-text">
+            Я подтверждаю согласие на обработку моих персональных данных (закон №152-ФЗ «О персональных данных») и
+            соглашаюсь с политикой конфиденциальности
+          </p>
+        </form>
+      </div>
+      <img src="popup.59c2997d.png" alt="img">
+    </div>
+  </div>
+
   <div class="wrapper">
 
     <header>
@@ -152,52 +189,92 @@
 </header>
 
     <main>
-      <section class="about-main section">
+      <section class="cart-page section">
         <div class="container">
-          <div class="about-main__content" style="background-image: url(&quot;main-section.6339eebc.png&quot;)">
-            <h1>
-              Салон Цветов “Букетная Мануфактура”: Почему выбирают нас?
-            </h1>
-            <div class="about-main__descr">
-              «Букетная мануфактура»- крупнейшая сеть салонов за Уралом. Наша первая студия была открыта в 2011 году:
-              более 10 лет мы следуем за мировыми трендами в области флористики, при этом сохраняя индивидуальную
-              эстетику и стиль. Наша главная цель-воплотить ваши идеи в реальность и помочь подарить приятные эмоции для
-              дорогих вам людей.
+          <h1>
+            Ваша корзина
+          </h1>
+          <div class="cart-page__content">
+            <div class="cart-page__content-item">
+              <button class="remove-cart" type="button">
+                <svg width="28" height="28" viewbox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2 2L26 26M26 2L2 26" stroke="#EDFCD6" stroke-width="4" stroke-linecap="round"></path>
+                </svg>
+              </button>
+              <img src="cart%201.37b80a31.png" alt="img">
+              <div class="cart-page__item-title">
+                Букет с антириумами и лилией
+              </div>
+              <div class="cart-page__item-price">
+                6 000 ₽
+              </div>
+              <button class="btn cart-page__btn" type="button">
+                Заказать букет
+              </button>
+            </div>
+            <div class="cart-page__content-item">
+              <button class="remove-cart" type="button">
+                <svg width="28" height="28" viewbox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2 2L26 26M26 2L2 26" stroke="#EDFCD6" stroke-width="4" stroke-linecap="round"></path>
+                </svg>
+              </button>
+              <img src="cart%201.37b80a31.png" alt="img">
+              <div class="cart-page__item-title">
+                Букет с антириумами и лилией
+              </div>
+              <div class="cart-page__item-price">
+                6 000 ₽
+              </div>
+              <button class="btn cart-page__btn" type="button">
+                Заказать букет
+              </button>
+            </div>
+            <div class="cart-page__content-item">
+              <button class="remove-cart" type="button">
+                <svg width="28" height="28" viewbox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2 2L26 26M26 2L2 26" stroke="#EDFCD6" stroke-width="4" stroke-linecap="round"></path>
+                </svg>
+              </button>
+              <img src="cart%201.37b80a31.png" alt="img">
+              <div class="cart-page__item-title">
+                Букет с антириумами и лилией
+              </div>
+              <div class="cart-page__item-price">
+                6 000 ₽
+              </div>
+              <button class="btn cart-page__btn" type="button">
+                Заказать букет
+              </button>
+            </div>
+            <div class="cart-page__content-item">
+              <button class="remove-cart" type="button">
+                <svg width="28" height="28" viewbox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2 2L26 26M26 2L2 26" stroke="#EDFCD6" stroke-width="4" stroke-linecap="round"></path>
+                </svg>
+              </button>
+              <img src="cart%201.37b80a31.png" alt="img">
+              <div class="cart-page__item-title">
+                Букет с антириумами и лилией
+              </div>
+              <div class="cart-page__item-price">
+                6 000 ₽
+              </div>
+              <button class="btn cart-page__btn" type="button">
+                Заказать букет
+              </button>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="about-descr section">
-        <div class="container">
-          <div class="about-descr__content">
-            <h2>
-              Условия заказа в нашем 
-              интернет-магазине.
-            </h2>
-            <p>
-              Наши салоны ежедневно открыты для жителей Барнаула, Новосибирска и Москвы. Местоположение студий позволяет
-              принимать заказы из всех городов России и за ее пределами.
-            </p>
-            <p>
-              Разница часовых поясов не помешает вам выбрать идеальный букет! Подарите незабываемые эмоции любимым
-              несмотря насколько далеко вы находитесь. Наши менеджеры проконсультируют вас в любое время, расскажут о
-              наших цветах и помогут оформить заказ.
-            </p>
-            <p>
-
-              Перед тем, как передать букет курьеру, вам будет отправлена фотография сделанной композиции. Мы заботимся
-              о вашем заказе и обеспечиваем надежную и бережную перевозку, а также контролируем температурный режим при
-              доставке. Как только курьер будет готов передать вам ваши цветы, вы получите sms-уведомление.
-            </p>
-            <p>
-              Мы искренне ценим мнение каждого клиента. Ваши отзывы помогают нам становиться лучше, совершенствовать
-              сервис и радовать вас еще более прекрасными букетами и безупречной доставкой. Благодаря вашим отзывам, мы
-              узнаем, что у нас получается хорошо, а над чем еще стоит поработать. Читайте отзывы других покупателей и
-              делитесь своим опытом. Вместе мы делаем наш сервис доставки букетов идеальным!
-              Спасибо, что помогаете нам расцветать.
-            </p>
+          <div class="cart-page__row">
+            <div class="cart-page__total">
+              Общая цена:
+              <span>
+                60 000 ₽
+              </span>
+            </div>
+            <button class="btn js-overlay__btn-open" type="button">
+              Оформить заявку
+            </button>
           </div>
-          <img class="about-descr__img" src="about-img.02f181ec.png" alt="img">
         </div>
       </section>
     </main>
