--- a/dekivery.html
+++ b/dekivery.html
@@ -102,6 +102,11 @@
                 страница товара
               </a>
             </li>
+            <li>
+              <a href="cart.html">
+                корзина
+              </a>
+            </li>
           </ul>
         </li>
         <li>
